--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-image-uploader",
+  "name": "react-image-uploader-to-base64",
   "version": "0.1.0",
-  "private": true,
+  "private": "false",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish": "babel src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
